force-app/main/default/objects/Engagement_Activity_Metrics__c/Engagement_Activity_Metrics__c.object-meta.xml
<CustomObject>
    <label>Engagement Activity Metrics</label>
    <nameField>
        <displayFormat>EAM-{0000}</displayFormat>
        <label>Engagement Activity Metrics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Activity Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>