force-app/main/default/objects/Engagement_Activity_Metrics__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountId</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Activity Metrics</relationshipLabel>
    <relationshipName>Engagement_Activity_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>