force-app/main/default/objects/Engagement_Activity_Metrics__c/fields/Channel_Category__c.field-meta.xml
<CustomField>
    <fullName>Channel_Category__c</fullName>
    <label>Channel Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>