force-app/main/default/objects/Engagement_Activity_Metrics__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ContactId</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Activity Metrics</relationshipLabel>
    <relationshipName>Engagement_Activity_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>