force-app/main/default/objects/Engagement_Activity_Metrics__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AccountId__c</columns>
    <columns>ContactId__c</columns>
    <columns>Channel_Category__c</columns>
    <columns>Channel__c</columns>
    <columns>Activity__c</columns>
    <columns>Activity_Count__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ContactId__c</field>
        <operation>contains</operation>
        <value>asraf</value>
    </filters>
    <label>All</label>
</ListView>